# openGLvoxelRaytracer

./: CMakeLists.txt  LICENSE
src/: dragon.binvox  glad.c  glad.h  helper.cpp  helper.h  loadModel.cpp  loadModel.h  main.cpp  shaders.h
src/shaders/: fragTexture.fs  fragment.fs  vertex.vs
